--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Aušra...</h1>
 <h2>Sveikinu </h2>
 <h2 class="su" >su...</h2>
-<h2 class="gimtadieniu" >Gimtadieniu! :)</h2>
+<h2 class="gimtadieniu" >Gimtadieniu:)</h2>
 
 
 <canvas id="birthday"></canvas>
